# E-commerce

./: .gitignore  README.md  test_api.py  vercel.json
api/: index.py  pyproject.toml  requirements.txt
backend/: .env.example  .gitignore  alembic.ini  main.py  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_marketplace_chat.py
backend/app/: auth.py  database.py  models.py  schemas.py
backend/app/routers/: auth.py  conversations.py  products.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  conversations.ts
frontend/src/components/: Navbar.tsx
frontend/src/pages/: Chats.tsx  Login.tsx  MyListings.tsx  ProductDetails.tsx  ProductList.tsx  SellItem.tsx  Signup.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
