[project]

name = "ecommerce-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "python-dotenv",
  "sqlalchemy",
  "asyncpg",
  "alembic",
  "pydantic",
  "python-jose[cryptography]",
  "passlib[bcrypt]",
  "bcrypt",
  "python-multipart",
  "email-validator"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
